project basic settings

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Solutions | Webpack 4, ES6, Postcss Boilerplate/Starter</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Solutions | Flexbox Template</title>
 </head>
 <body>
-
+Site
 </body>
 </html>
