added basic html structure

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Solutions | Flexbox Template</title>
+  <title>Solutions | Flexbox Template</title>
 </head>
 <body>
-Site
+
+  <div class="container">
+
+    <header class="header">
+
+      <img class="logo" src="assets/images/logo.png" alt="Logo">
+
+      <form action="#" class="search">
+        <input type="text" class="search__input" placeholder="Search hotels">
+        <button class="search__button">
+          <svg class="search__icon">
+            <use xlink:href="assets/sprites/sprite.svg#icon-magnifiying-glass" />
+          </svg>
+        </button>
+      </form>
+
+    </header>
+
+    <div class="content">
+
+      <nav class="sidebar">
+        Navigation
+      </nav>
+
+      <main class="hotel-view">
+        Hotel View
+      </main>
+
+    </div>
+
+  </div>
+
 </body>
 </html>
