added header section

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+
   <div class="container">
 
     <header class="header">
@@ -18,10 +19,33 @@
         <input type="text" class="search__input" placeholder="Search hotels">
         <button class="search__button">
           <svg class="search__icon">
-            <use xlink:href="assets/sprites/sprite.svg#icon-magnifiying-glass" />
+            <use href="assets/sprites/spritemap.svg#icon-magnifying-glass"></use>
           </svg>
         </button>
       </form>
+
+      <nav class="user-nav">
+
+        <div class="user-nav__icon-box">
+          <svg class="user-nav__icon">
+            <use href="assets/sprites/spritemap.svg#icon-bookmark"></use>
+          </svg>
+          <span class="user-nav__notification">7</span>
+        </div>
+
+        <div class="user-nav__icon-box">
+          <svg class="user-nav__icon">
+            <use href="assets/sprites/spritemap.svg#icon-chat"></use>
+          </svg>
+          <span class="user-nav__notification">13</span>
+        </div>
+
+        <div class="user-nav__user">
+          <img src="assets/images/user.jpg" alt="User photo" class="user-nav__user-photo">
+          <span class="user-nav__user-name">Jonas</span>
+        </div>
+
+      </nav>
 
     </header>
 
