--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,49 @@
     <div class="content">
 
       <nav class="sidebar">
-        Navigation
+        <ul class="side-nav">
+
+          <li class="side-nav__item side-nav__item--active">
+            <a href="#" class="side-nav__link">
+              <svg class="side-nav__icon">
+                <use href="assets/sprites/spritemap.svg#icon-home"></use>
+              </svg>
+              <span>Hotel</span>
+            </a>
+          </li>
+
+          <li class="side-nav__item">
+            <a href="#" class="side-nav__link">
+              <svg class="side-nav__icon">
+                <use href="assets/sprites/spritemap.svg#icon-aircraft-take-off"></use>
+              </svg>
+              <span>Flight</span>
+            </a>
+          </li>
+
+          <li class="side-nav__item">
+            <a href="#" class="side-nav__link">
+              <svg class="side-nav__icon">
+                <use href="assets/sprites/spritemap.svg#icon-key"></use>
+              </svg>
+              <span>Car rental</span>
+            </a>
+          </li>
+
+          <li class="side-nav__item">
+            <a href="#" class="side-nav__link">
+              <svg class="side-nav__icon">
+                <use href="assets/sprites/spritemap.svg#icon-map"></use>
+              </svg>
+              <span>Tours</span>
+            </a>
+          </li>
+
+        </ul>
+
+        <div class="legal">
+          &copy; 2017 by Me. All rights reserved.
+        </div>
       </nav>
 
       <main class="hotel-view">
