--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,60 @@
       </nav>
 
       <main class="hotel-view">
-        Hotel View
+
+        <div class="gallery">
+          <figure class="gallery__item">
+            <img src="assets/images/hotel-1.jpg" alt="Photo" class="gallery__photo">
+          </figure>
+
+          <figure class="gallery__item">
+            <img src="assets/images/hotel-2.jpg" alt="Photo" class="gallery__photo">
+          </figure>
+
+          <figure class="gallery__item">
+            <img src="assets/images/hotel-3.jpg" alt="Photo" class="gallery__photo">
+          </figure>
+        </div>
+
+        <div class="overview">
+          <h1 class="overview__heading">
+            Hotel Las Palmas
+          </h1>
+
+          <div class="overview__stars">
+            <svg class="overview__icon-star">
+              <use href="assets/sprites/spritemap.svg#icon-star"></use>
+            </svg>
+            <svg class="overview__icon-star">
+              <use href="assets/sprites/spritemap.svg#icon-star"></use>
+            </svg>
+            <svg class="overview__icon-star">
+              <use href="assets/sprites/spritemap.svg#icon-star"></use>
+            </svg>
+            <svg class="overview__icon-star">
+              <use href="assets/sprites/spritemap.svg#icon-star"></use>
+            </svg>
+            <svg class="overview__icon-star">
+              <use href="assets/sprites/spritemap.svg#icon-star"></use>
+            </svg>
+          </div>
+
+          <div class="overview__location">
+            <svg class="overview__icon-location">
+              <use href="assets/sprites/spritemap.svg#icon-location-pin"></use>
+            </svg>
+            <button class="btn-inline">
+              Albufeira, Portugal
+            </button>
+          </div>
+
+          <div class="overview__rating">
+            <div class="overview__rating-average">8.6</div>
+            <div class="overview__rating-count">456 votes</div>
+          </div>
+
+        </div>
+
       </main>
 
     </div>
