--- a/src/index.html
+++ b/src/index.html
@@ -149,6 +149,43 @@
             <div class="overview__rating-average">8.6</div>
             <div class="overview__rating-count">456 votes</div>
           </div>
+        </div>
+
+        <div class="detail">
+
+          <div class="description">
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate.
+            </p>
+            <p class="paragraph">
+              Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
+            </p>
+            <ul class="list">
+              <li class="list__item">Close to the beach</li>
+              <li class="list__item">Breakfast included</li>
+              <li class="list__item">Free airport shuttle</li>
+              <li class="list__item">Free wifi in all rooms</li>
+              <li class="list__item">Airconditioning and heating</li>
+              <li class="list__item">Pets alowed</li>
+              <li class="list__item">We speak all languages</li>
+              <li class="list__item">Perfect for families</li>
+            </ul>
+            <div class="recommend">
+              <p class="recommend__count">
+                Lucy and 3 other friends recomend this hotel.
+              </p>
+              <div class="recommend__friends">
+                <img src="assets/images/user-3.jpg" alt="Friend 1" class="recommend__photo">
+                <img src="assets/images/user-4.jpg" alt="Friend 2" class="recommend__photo">
+                <img src="assets/images/user-5.jpg" alt="Friend 3" class="recommend__photo">
+                <img src="assets/images/user-6.jpg" alt="Friend 4" class="recommend__photo">
+              </div>
+            </div>
+          </div>
+
+          <div class="user-review">
+            User reviews
+          </div>
 
         </div>
 
